--- a/src/main/resources/templates/freeboard/form.html
+++ b/src/main/resources/templates/freeboard/form.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <title>자유 게시판 작성</title>
-  <link rel="stylesheet" th:href="@{/freeboard/css/style.css}" />
+  <title>새 글 작성</title>
 </head>
 <body>
-<h1>글 작성</h1>
-<!-- 자유 게시판 작성 폼 -->
-<form th:action="@{/fashionlog/freeboard}" method="post">
+<h1>새 글 작성</h1>
+<form th:action="@{/fashionlog/freeboard/new}" method="post">
   <div>
     <label for="title">제목</label>
-    <input type="text" id="title" name="title" required/>
-  </div>
-  <div>
+    <input type="text" id="title" name="title" required>
     <label for="content">내용</label>
     <textarea id="content" name="content" required></textarea>
   </div>
-  <button type="submit">저장</button>
+  <button type="submit">작성하기</button>
 </form>
+<a th:href="@{/fashionlog/freeboard}">취소</a>
 </body>
 </html>
