Enhancement: 전반적인 예외 처리

--- a/src/main/resources/templates/notice/edit.html
+++ b/src/main/resources/templates/notice/edit.html
@@ -19,7 +19,7 @@
         <div>
             <label>분류:</label>
             <div th:each="cat : ${categories}">
-                <input type="radio" th:field="*{category}" th:value="${cat}" th:id="${'category-' + cat}" />
+                <input type="radio" th:field="*{category}" th:value="${cat}" th:id="${'category-' + cat}" required/>
                 <label th:for="${'category-' + cat}" th:text="${cat.displayName}"></label>
             </div>
         </div>
